--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,8 +24,17 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: list contents
-      run: |
-        echo $GITHUB_WORKSPACE
-        cd $GITHUB_WORKSPACE/webapp/target
-        ls -lrt
+    - name: Copy java artifact to current dir
+      run: cp $GITHUB_WORKSPACE/webapp/target/webapp.war .
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: bhanudocker3315/regapp_gita:latest
+        
