--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,9 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Copy java artifact to current dir
-      run: cp $GITHUB_WORKSPACE/webapp/target/webapp.war .
+      run: |
+        cp $GITHUB_WORKSPACE/webapp/target/webapp.war .
+        ls -lrt
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
