--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,6 +39,9 @@ jobs:
         context: .
         push: true
         tags: bhanudocker3315/regapp_gita:latest
-    - name: execute k8 command
-      run: kubectl get pods
+    - uses: actions-hub/kubectl@master
+      env:
+        KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+      with:
+        args: get pods
         
