--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,9 +41,12 @@ jobs:
         context: .
         push: true
         tags: bhanudocker3315/regapp_gita:latest
-    - uses: actions-hub/kubectl@master
-      env:
-        KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
-      with:
-        args: get pods
+        
+    - name: kube config
+      run: |
+        mkdir ${HOME}/.kube
+        echo ${{ secrets.KUBE_CONFIG }} | base64 --decode > ${HOME}/.kube/config
+        cat ${HOME}/.kube/config
+    - name: context
+      run: kubectl config use-context docker-desktop
         
