--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,5 +48,7 @@ jobs:
         echo ${{ secrets.KUBE_CONFIG }} | base64 --decode > ${HOME}/.kube/config
         cat ${HOME}/.kube/config
     - name: context
-      run: kubectl config current-context
+      run: |
+        kubectl config current-context
+        kubectl get pods
         
