--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,5 +50,5 @@ jobs:
     - name: context
       run: |
         kubectl config current-context
-        kubectl get pods
+        kubectl config view
         
