--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,8 +37,8 @@ jobs:
        cat << EOF > build.tag
        EOF
        cat build.tag >> $GITHUB_ENV
-       git commit -m "Add changes" -a
-       git push
+       #git commit -m "Add changes" -a
+       #git push
          
     - name: Login to DockerHub
       uses: docker/login-action@v1 
