--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,7 +36,8 @@ jobs:
        let values[3]=${values[3]}+1
        cat << EOF > build.tag
        EOF
-       cat build.tag >> $GITHUB_ENV
+       cat build.tag
+       #cat build.tag >> $GITHUB_ENV
        #git commit -m "Add changes" -a
        #git push
          
