--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,7 +36,8 @@ jobs:
        echo $version_tag
        values=(${version_tag//./ })
        echo build.number: ${values[3]}
-       #let values[3]=${values[3]}+1
+       let values[3]=${values[3]}+1
+       echo build.number: ${values[3]}
        #cat << EOF > build.tag
        #EOF
        #cat build.tag
