--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,21 +32,22 @@ jobs:
     - name: execute ant script to updated version
       run: |
        cat build.tag
-       version_tag=`cat build.tag | grep "version" | cut -d'=' -f2`
+       version_tag=`cat build.tag | grep -i "VERSION_TAG" | cut -d'=' -f2`
        echo $version_tag
        values=(${version_tag//./ })
        echo build.number: ${values[3]}
        let values[3]=${values[3]}+1
        echo build.number: ${values[3]}
        cat << EOF > build.tag
-       version.number=${values[0]}.${values[1]}.${values[2]}.${values[3]}
+       VERSION_TAG=${values[0]}.${values[1]}.${values[2]}.${values[3]}
        EOF
        cat build.tag
        cat build.tag >> $GITHUB_ENV
+       echo $VERSION_TAG
        #git commit -m "Add changes" -a
        #git push
-       env:
-        VERSION_TAG: ${values[0]}.${values[1]}.${values[2]}.${values[3]}
+       #env:
+       #VERSION_TAG: ${values[0]}.${values[1]}.${values[2]}.${values[3]}
          
     - name: Login to DockerHub
       uses: docker/login-action@v1 
