--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -66,7 +66,7 @@ jobs:
         push: true
         tags: | 
           bhanudocker3315/regapp_gita:latest
-          bhanudocker3315/regapp_gita:${env.TAG_VERSION}
+          bhanudocker3315/regapp_gita:${{ env.TAG_VERSION }}
         
     - name: kube config
       run: |
