--- a/regapp-deploy.yml
+++ b/regapp-deploy.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1 
 kind: Deployment
 metadata:
-  name: valaxy-regapp
+  name: deploy-regapp
   labels: 
      app: regapp
 
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: regapp
-        image: valaxy/regapp
+        image: bhanudocker3315/regapp_gita
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
