--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -79,6 +79,7 @@ jobs:
       run: |
         kustomize edit set image bhanudocker3315/regapp_gita:${{ env.TAG_VERSION }} > new_config.yml
         cat new_config.yml
+        kustomize build .
         
         
         
