--- a/k8s/regapp-service.yml
+++ b/k8s/regapp-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: regapp-service
+  name: regapp-service-gita
   labels:
     app: regapp 
 spec:
@@ -9,7 +9,7 @@ spec:
     app: regapp 
 
   ports:
-    - port: 8080
+    - port: 8092
       targetPort: 8080
 
   type: LoadBalancer
