--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,15 @@ jobs:
 
     steps:
     
-    - uses: actions/checkout@v2    
+    - name: checkout 
+      uses: actions/checkout@v2 
+    
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
