--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
       uses: sonarsource/sonarqube-scan-action@master
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: http://localhost:9010/
+        SONAR_HOST_URL: http://172.27.0.3:9010/
         
     - name: Set up JDK 11
       uses: actions/setup-java@v2
